--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-#spring.profiles.active=prod
-notificador.email.host-servidor=smtp.algafood.com.br
+spring.profiles.active=development
 notificador.email.porta-servidor=28
