--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.profiles.active=development
-notificador.email.porta-servidor=28
+spring.datasource.url=jdbc:mysql://localhost/macfoodapi?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
