--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>7.8.0</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
 	</dependencies>
 
 	<build>
