--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/macfoodapi?createDatabaseIfNotExist
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jpa.show-sql=true
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
