--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>flyway-core</artifactId>
 			<version>7.8.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
