--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>API de delivery de comida</description>
 	<properties>
 		<java.version>17</java.version>
+		<modelmapper.version>3.1.0</modelmapper.version>
 	</properties>
 
 	<dependencies>
@@ -67,6 +68,11 @@
 		    <groupId>io.rest-assured</groupId>
 		    <artifactId>rest-assured</artifactId>
 		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		  <groupId>org.modelmapper</groupId>
+		  <artifactId>modelmapper</artifactId>
+		  <version>${modelmapper.version}</version>
 		</dependency>
 	</dependencies>
 
