--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<modelmapper.version>3.1.0</modelmapper.version>
+		<squiggly.version>1.3.18</squiggly.version>
 	</properties>
 
 	<dependencies>
@@ -74,6 +75,12 @@
 		  <artifactId>modelmapper</artifactId>
 		  <version>${modelmapper.version}</version>
 		</dependency>
+		
+		<dependency>
+	    <groupId>com.github.bohnman</groupId>
+	    <artifactId>squiggly-filter-jackson</artifactId>
+	    <version>${squiggly.version}</version>
+	</dependency>
 	</dependencies>
 
 	<build>
