Implementando o serviço storage da AWS na Amazon S3 (Criando chaves de acesso para API da AWS, criando o bean de configuração, adicionando o SDK Java da Amazon S3 no projeto e configurando as credenciais).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
 macfood.storage.local.diretorio-fotos=D:\\catalogo
+
+#macfood.storage.s3.id-chave-acesso=
+#macfood.storage.s3.chave-acesso-secreta=
+macfood.storage.s3.bucket=macfood-test
+macfood.storage.s3.regiao=us-east-1
+macfood.storage.s3.diretorio-fotos=catalogo
