--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+macfood.storage.tipo=s3
+
 macfood.storage.local.diretorio-fotos=D:\\catalogo
 
 #macfood.storage.s3.id-chave-acesso=
