Configurando o projeto para envio de email transacionais usando o serviço SMTP da AWS SES e implementando a infraestrutura de envio de email com Spring. Usando o Apache FreeMaker para processar uma página HTML template. Melhorando e formatando o texto com FTL(FreeMarker Template Language).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,14 @@ macfood.storage.local.diretorio-fotos=D:\\catalogo
 macfood.storage.s3.bucket=macfood-test
 macfood.storage.s3.regiao=us-east-1
 macfood.storage.s3.diretorio-fotos=catalogo
+
+spring.mail.host=email-smtp.us-east-1.amazonaws.com
+spring.mail.port=587
+#spring.mail.username=
+#spring.mail.password=
+
+macfood.email.remetente=MacFood <macbarbos@gmail.com>
+
+spring.freemarker.settings.locale=pt_BR
+
+macfood.email.impl=fake
