--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,13 +23,13 @@ macfood.storage.s3.bucket=macfood-test
 macfood.storage.s3.regiao=us-east-1
 macfood.storage.s3.diretorio-fotos=catalogo
 
+#Email
 spring.mail.host=email-smtp.us-east-1.amazonaws.com
 spring.mail.port=587
 #spring.mail.username=
 #spring.mail.password=
-
 macfood.email.remetente=MacFood <macbarbos@gmail.com>
-
 spring.freemarker.settings.locale=pt_BR
+macfood.email.impl=smtp
 
-macfood.email.impl=fake
+macfood.email.sandbox.destinatario=malexandrebarbo@gmail.com
