--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,6 @@ spring.mail.port=587
 #spring.mail.password=
 macfood.email.remetente=MacFood <macbarbos@gmail.com>
 spring.freemarker.settings.locale=pt_BR
-macfood.email.impl=smtp
+macfood.email.impl=fake
 
 macfood.email.sandbox.destinatario=malexandrebarbo@gmail.com
