--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${spring-fox.version}</version>
+			<exclusions>
+			<exclusion>
+				<groupId>org.springframework.plugin</groupId>
+				<artifactId>spring-plugin-core</artifactId>
+			</exclusion>
+		</exclusions>
 		</dependency>
 
 		<dependency>
@@ -134,7 +140,17 @@
 		<groupId>io.springfox</groupId>
 		<artifactId>springfox-bean-validators</artifactId>
 		<version>${spring-fox.version}</version>
+		<exclusions>
+			<exclusion>
+				<groupId>org.springframework.plugin</groupId>
+				<artifactId>spring-plugin-core</artifactId>
+			</exclusion>
+		</exclusions>
 	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
