--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.web.resources.add-mappings=false
 
 server.compression.enabled=true
 
+#logging.loggly.token=seu_customer_token_aqui
+
 macfood.storage.tipo=s3
 
 macfood.storage.local.diretorio-fotos=D:\\catalogo
