Configurando Spring Security com HTTP Basic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.freemarker.settings.locale=pt_BR
 macfood.email.impl=fake
 
 macfood.email.sandbox.destinatario=malexandrebarbo@gmail.com
+
+spring.security.user.name=macfood
+spring.security.user.password=123456
